# OrionHealth

./: .env.example  .gitignore  APK_BUILD_STATUS.md  ARCHITECTURE.md  CHANGELOG.md  CI_CD_IMPROVEMENTS_SUMMARY.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  DEPLOY_CICD_README.md  DEVELOPMENT_STATUS.md  DIAGNOSTIC_REPORT.md  DOCS_INDEX.md  FEATURES.json  GAP_REPORT.md  GITPROTOCOL.md  HANDOFF.md  IDENTITY.md  INVESTIGATION_MedicalAssistantCubit_Tests.md  PLANNING.md  PROTOCOL.md  README.md  README_ACCION_REQUERIDA.md  SECURITY.md  SISTEMA_CI_CD_FUNCIONAL.md  TASK.md  TASK_GH_ISSUES.md  _build_apk.ps1  all_files.txt  all_lib_files.txt  analysis_options.yaml  analysis_output.txt  analyze_errors.txt  analyze_errors_2.txt  analyze_output.txt  analyze_output_v2.txt  analyze_output_v3.txt  analyze_report.txt  analyze_report_v2.txt  analyze_report_v3.txt  (+42 more)
.gitcore/: AGENT_INDEX.md  ARCHITECTURE.md  features.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.openclaw/: workspace-state.json
.opencode/: orion-health-agent.md
.✨/: AGENT_INDEX.md  CONTEXT_LOG.md
android/: build.gradle.kts  gradle.properties  lint-baseline.xml
android/app/src/main/cpp/: CMakeLists.txt  llama-jni.cpp
backend/: .env.example  README.md  package-lock.json  package.json
docs/: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CICD_SYSTEM_GUIDE.md  CONTRIBUTING.md  FEATURE_AUDIT.md  GEMINI_SETUP.md  GITHUB_ISSUES_TEMPLATE.md  HANDOFF.md  JULES_PIPELINE.md  MCP_PROGRESS_BLOCKED.md  MCP_PROTOCOL_IMPLEMENTATION.md  MCP_SERVER_SPECIFICATION.md  MCP_SETUP_INSTRUCTIONS.md  MODEL_MANAGER_IMPLEMENTATION.md  ORIONHEALTH-ROADMAP.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PRODUCTION_CHECKLIST.md  README.md  ROADMAP_MCP_INTEGRATION.md  RUST_MIGRATION_PROGRESS.md  SESION_PROGRESO_2026-01-06.md  SMART_LLM_MANAGER_GUIDE.md  SPRINT_PROGRESS_2026-01-05.md  TASK_LANDING.md  _claude_task.ps1  _config.yml  _prompt.txt  _run_claude.cmd  about.md  aicore-status.md  astro.config.mjs  contribute.md  dev-guide.md  features.md  gemma4-integration.md  get-started.md  improvements-extraction.md  index.md  (+9 more)
integration_test/: README.md  about_e2e_test.dart  allergies_e2e_test.dart  app_test.dart  appointments_e2e_test.dart  auth_e2e_test.dart  calendar_import_e2e_test.dart  doctor_verification_e2e_test.dart  email_citas_e2e_test.dart  eps_connection_e2e_test.dart  flows_test.dart  (+22 more)
rust/: Cargo.toml
rust/examples/: model_manager_demo.rs
rust/src/: database.rs  error.rs  health.rs  lib.rs  llm.rs  models.rs  search.rs  vector_store.rs
rust/src/llm/: gemini_adapter.rs  model_manager.rs  smart_manager.rs
rust/tests/: database_integration.rs
(+1615 files in other folders)
