[package]
name = "rust_lib_orionhealth_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"

# Database
surrealdb = { version = "2.2.0", default-features = false, features = ["kv-mem", "protocol-ws"] }

# AI/LLM Inference
candle-core = "0.8.0"
candle-transformers = "0.8.0"
candle-nn = "0.8.0"
tokenizers = "0.20.3"
hf-hub = "0.3.2"

# Async Runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

# Async trait
async-trait = "0.1"

# HTTP client for model downloads
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"

# MCP Server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio-stream = "0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization
strip = true        # Strip symbols for smaller binary
codegen-units = 1   # Better optimization

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.13"
